@@ -1,3 +1,8 @@
+2005-11-07  Carl Worth  <cworth@cworth.org>
+
+	* src/cairo-gstate.c: Add documentation for _cairo_gstate_create,
+	_cairo_gstate_init_copy, and _cairo_gstate_clone.
+
 2005-11-05  Carl Worth  <cworth@cworth.org>
 
 	* src/cairo-font-options.c: (_cairo_font_options_init_copy),
